<resources>
    <string name="app_name">foodRunnerApplication</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="description">Enter your registered mobile number and email below :</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Don\'t have an account? Sign up now</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_registration">Password (Min. 4 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="name">Name (Min. 3 characters )</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="login_details">Login Details</string>
    <string name="enter_the_new_password_below">Enter the new password below :</string>
    <string name="dashboard">DashBoard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_details">Order Details</string>
</resources>