<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FogotPasswordActivity"
    android:background="#000000">

    <ImageView
        android:id="@+id/imgIconForgotPage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/img"/>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="#FFD3A3"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_below="@id/imgIconForgotPage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


    <EditText
        android:id="@+id/etRegisteredMobile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:layout_below="@id/txtDescription"
        android:layout_centerHorizontal="true"
        android:hint="@string/mobile_number_10_digits"
        android:textColor="#000000"
        android:background="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/etRegisteredEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:layout_below="@id/etRegisteredMobile"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address"
        android:textColor="#000000"
        android:background="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btnNextForgot"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:background="#FC2947"/>


</RelativeLayout>